log/build_2023-12-24_02-23-03/mypkg/stderr.log
  File "/home/kaede/ros2_ws/src/mypkg/install/mypkg/lib/python3.8/site-packages/mypkg/listener.py", line 8
    def is_prime(N)://素数か判定
                    ^
SyntaxError: invalid syntax

